Initial commits for backend

--- a/views/billinginformation.html
+++ b/views/billinginformation.html
@@ -35,14 +35,13 @@
  		<div class="row">
  			<div class="col-sm-4"></div>
  			<div class="col-sm-4">
-      			<div class="input-group date" data-provide="datepicker">
-    				<input type="text" class="form-control" value="{{date | date:' MM-dd-yyyy'}}"/>
+      			<div class="input-group date" data-provide="datepicker" id="datetime1">
+    				<input type="text" class="form-control" value="{{dateSelected | date:' MM-dd-yyyy'}}"/>
     				<div class="input-group-addon">
         				<span class="glyphicon glyphicon-th"></span>
     				</div>
 				</div>
-			</div>
-			<div data-date="12/03/2012"></div>	
+			</div>	
 		</div>
 	</div>
  	</body>
